# utshell

./: 1  2  README.en.md  README.md  a.sh  gen.sh  gen2.sh  record.txt  return  x.sh
bash-5.1/: .gitignore  1.sh  Cargo.toml  Makefile.in  README.md  README.zh_CN.md  alias.c  array.c  array.h  arrayfunc.c  arrayfunc.h  assoc.c  assoc.h  bashansi.h  bashhist.c  bashhist.h  bashintl.h  bashjmp.h  bashline.c  braces.c  builtins.h  config-bot.h  configure  configure.ac  conftypes.h  copy_cmd.c  create-so.sh  dispose_cmd.c  error.h  execute_cmd.c  externs.h  findcmd.c  flags.c  gen.sh  general.c  general.h  hashcmd.c  hashlib.c  hashlib.h  input.c  (+35 more)
bash-5.1/.cargo/: config.toml
bash-5.1/builtins/: alias.def  bind.def  break.def  builtin.c  caller.def  cd.def  common.c  exit.def  fc.def  fg_bg.def  getopts.def  hash.def  jobs.def  pushd.def  read.def  set.def  setattr.def  wait.def
bash-5.1/builtins_rust/: build.rs  builtin.rs
bash-5.1/builtins_rust/alias/: Cargo.toml  lib.rs
bash-5.1/builtins_rust/bind/: Cargo.toml
bash-5.1/builtins_rust/break_1/: Cargo.toml
bash-5.1/builtins_rust/builtin/: Cargo.toml
bash-5.1/builtins_rust/caller/: Cargo.toml
bash-5.1/builtins_rust/cd/: Cargo.toml
bash-5.1/builtins_rust/colon/: Cargo.toml
bash-5.1/builtins_rust/command/: Cargo.toml
bash-5.1/builtins_rust/common/: Cargo.toml
bash-5.1/builtins_rust/complete/: Cargo.toml
bash-5.1/builtins_rust/declare/: Cargo.toml
bash-5.1/builtins_rust/echo/: Cargo.toml
bash-5.1/builtins_rust/enable/: Cargo.toml
bash-5.1/builtins_rust/eval/: Cargo.toml
bash-5.1/builtins_rust/exec/: Cargo.toml
bash-5.1/builtins_rust/exec_cmd/: Cargo.toml
bash-5.1/builtins_rust/exit/: Cargo.toml
bash-5.1/builtins_rust/fc/: Cargo.toml
bash-5.1/builtins_rust/fg_bg/: Cargo.toml
bash-5.1/builtins_rust/getopts/: Cargo.toml
bash-5.1/builtins_rust/hash/: Cargo.toml
bash-5.1/builtins_rust/help/: Cargo.toml
bash-5.1/builtins_rust/history/: Cargo.toml
bash-5.1/builtins_rust/jobs/: Cargo.toml
bash-5.1/builtins_rust/kill/: Cargo.toml
bash-5.1/builtins_rust/mapfile/: Cargo.toml
bash-5.1/builtins_rust/printf/: Cargo.toml
bash-5.1/builtins_rust/pushd/: Cargo.toml
bash-5.1/builtins_rust/read/: Cargo.toml
bash-5.1/builtins_rust/rlet/: Cargo.toml
bash-5.1/builtins_rust/rreturn/: Cargo.toml
bash-5.1/builtins_rust/set/: Cargo.toml
bash-5.1/builtins_rust/setattr/: Cargo.toml
bash-5.1/builtins_rust/shift/: Cargo.toml
bash-5.1/builtins_rust/shopt/: Cargo.toml
bash-5.1/builtins_rust/source/: Cargo.toml
bash-5.1/builtins_rust/suspend/: Cargo.toml
bash-5.1/builtins_rust/test/: Cargo.toml
bash-5.1/builtins_rust/times/: Cargo.toml
bash-5.1/builtins_rust/trap/: Cargo.toml
bash-5.1/builtins_rust/type/: Cargo.toml
bash-5.1/builtins_rust/ulimit/: Cargo.toml
bash-5.1/builtins_rust/umask/: Cargo.toml
bash-5.1/builtins_rust/wait/: Cargo.toml
bash-5.1/cargo/: config.toml
bash-5.1/doc/: Makefile.in  bashref.texi
bash-5.1/examples/loadables/: Makefile.in
bash-5.1/r_assoc/src/: lib.rs
bash-5.1/r_bashhist/src/: lib.rs
bash-5.1/r_bracecomp/src/: lib.rs
bash-5.1/r_braces/src/: lib.rs
bash-5.1/r_execute_cmd/: Cargo.toml
bash-5.1/r_execute_cmd/src/: lib.rs
bash-5.1/r_jobs/src/: lib.rs
bash-5.1/r_locale/src/: lib.rs
bash-5.1/r_print_cmd/src/: lib.rs
bash-5.1/r_variables/: Cargo.toml
bash-5.1/r_variables/src/: lib.rs
bash-5.1/resources/en-US/: message.ftl
bash-5.1/resources/zh-CN/: message.ftl
bash-5.1/resources/zh-HK/: message.ftl
bash-5.1/src/: lib.rs  main.rs
bash-5.1/support/: rash.pc
bash-5.1/u_src/src/: lib.rs
utshell-0.4/r_alias/: Cargo.toml
utshell-0.4/r_alias/src/: lib.rs
utshell-0.4/r_arrayfunc/: Cargo.toml
utshell-0.4/r_bashline/: Cargo.toml
utshell-0.4/r_bashline/src/: lib.rs
utshell-0.4/r_bracecomp/: Cargo.toml
utshell-0.4/r_copycmd/: Cargo.toml
utshell-0.4/r_flags/: Cargo.toml
utshell-0.4/r_flags/src/: lib.rs
utshell-0.4/r_make_cmd/: Cargo.toml
utshell-0.4/r_make_cmd/src/: lib.rs
utshell-0.4/r_trap/: Cargo.toml
utshell-0.4/r_trap/src/: lib.rs
utshell-0.5/: Cargo.toml  Makefile.in  README  array.c  bashline.h  command.h  config-top.h  dispose_cmd.c  dispose_cmd.h  eval.c  findcmd.h  flags.h  input.h  jobs.c  mailcheck.c  make_cmd.c  mksyntax.c  patchlevel.h  redir.h  stringlib.c  subst.h  version.c
utshell-0.5/builtins/: Makefile.in  set.def
utshell-0.5/builtins_rust/alias/: Cargo.toml
utshell-0.5/builtins_rust/break_1/: Cargo.toml
utshell-0.5/builtins_rust/cd/: Cargo.toml
utshell-0.5/builtins_rust/common/: Cargo.toml
utshell-0.5/builtins_rust/declare/: Cargo.toml
utshell-0.5/builtins_rust/fc/: Cargo.toml
utshell-0.5/builtins_rust/history/: Cargo.toml
utshell-0.5/debian/: README.source  bash.postinst.debhelper  bash.postrm.debhelper  bash.preinst  bash.substvars  control  control2  copyright  menu.ex  postrm.ex  rules  utshell.cron.d.ex  utshell.doc-base.EX
utshell-0.5/lib/glob/: Makefile.in
utshell-0.5/po/: af.gmo  cs.gmo  cs.po  da.gmo  da.po  de.gmo  de.po  en@quot.po  es.po  fr.gmo  ga.po  hu.gmo  id.po  it.po  ko.po  lt.gmo  nb.po  pl.gmo  pt.gmo  pt.po  pt_BR.gmo  sl.gmo  sl.po  sv.gmo  sv.po  tr.po  vi.po  zh_CN.gmo  zh_CN.po  zh_TW.gmo  zh_TW.po
utshell-0.5/r_array/: Cargo.toml
utshell-0.5/r_arrayfunc/: Cargo.toml
utshell-0.5/r_dispose_cmd/: Cargo.toml
utshell-0.5/r_error/: Cargo.toml
utshell-0.5/r_execute_cmd/: Cargo.toml
utshell-0.5/r_expr/: Cargo.toml
utshell-0.5/r_findcmd/: Cargo.toml
utshell-0.5/r_general/: Cargo.toml
utshell-0.5/r_glob/: Cargo.toml
utshell-0.5/r_hashcmd/: Cargo.toml
utshell-0.5/r_hashlib/: Cargo.toml
utshell-0.5/r_input/: Cargo.toml
utshell-0.5/r_jobs/: Cargo.toml
utshell-0.5/r_list/: Cargo.toml
utshell-0.5/r_locale/: Cargo.toml
utshell-0.5/r_mailcheck/: Cargo.toml
utshell-0.5/r_mksyntax/: Cargo.toml
utshell-0.5/r_nojobs/: Cargo.toml
utshell-0.5/r_redir/: Cargo.toml  build.rs
utshell-0.5/r_shell/: Cargo.toml
utshell-0.5/r_stringlib/: Cargo.toml
utshell-0.5/r_variables/: Cargo.toml
utshell-0.5/r_y_tab/: Cargo.toml
(+308 files in other folders)
