[package]
name = "rsbash"
version = "0.1.0"
edition = "2021"
[lib]
name = "rsbash"
crate-type = ["cdylib"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[workspace]
members = ["builtins_rust/read", "builtins/command1", "builtins/command2", "builtins_rust/history", "builtins_rust/kill",
"builtins_rust/rlet", "builtins_rust/mapfile", "builtins_rust/printf", "builtins_rust/rreturn", "builtins_rust/shift",
"builtins_rust/times","builtins_rust/suspend", "builtins_rust/test",
"builtins_rust/jobs","builtins_rust/cd", "builtins_rust/fg_bg",
"builtins_rust/fc","builtins_rust/getopts"]

[dependencies]
libc = "0.2"
command1 = {path = "./builtins/command1"}
command2 = {path = "./builtins/command2"}
read = {path = "./builtins_rust/read"}
history = {path = "./builtins_rust/history"}
kill = {path = "./builtins_rust/kill"}
rlet = {path = "./builtins_rust/rlet"}
mapfile = {path = "./builtins_rust/mapfile"}
printf = {path = "./builtins_rust/printf"}
rreturn = {path = "./builtins_rust/rreturn"}
shift = {path = "./builtins_rust/shift"}
times = {path = "./builtins_rust/times"}
suspend = {path = "./builtins_rust/suspend"}
test = {path = "./builtins_rust/test"}
rjobs = {path = "./builtins_rust/jobs"}
rcd = {path = "./builtins_rust/cd"}
rfg_bg = {path = "./builtins_rust/fg_bg"}
rfc = {path = "./builtins_rust/fc"}
rgetopts = {path = "./builtins_rust/getopts"}
