[package]
name = "rsbash"
version = "0.1.0"
edition = "2021"


[lib]
name = "rsbash"
crate-type = ["cdylib"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[workspace]

members=[
 "builtins_rust/jobs",
 "builtins_rust/cd",
 "builtins_rust/fg_bg",
 "builtins_rust/read",
 "builtins_rust/fc",
 "builtins_rust/getopts",
 "builtins_rust/colon",
 "builtins_rust/builtin",
 "builtins_rust/exit",
 "builtins_rust/help",
 "builtins_rust/alias",
 "builtins_rust/cmd",
 "builtins_rust/enable",
 "builtins_rust/declare",
 "builtins_rust/setattr",
]

[dependencies]
libc = "0.2"
read = {path = "./builtins_rust/read"}
#history = {path = "./builtins_rust/history"}
#kill = {path = "./builtins_rust/kill"}
#rlet = {path = "./builtins_rust/rlet"}
#mapfile = {path = "./builtins_rust/mapfile"}
#printf = {path = "./builtins_rust/printf"}
#rreturn = {path = "./builtins_rust/rreturn"}
# shift = {path = "./builtins_rust/shift"}
#times = {path = "./builtins_rust/times"}
#suspend = {path = "./builtins_rust/suspend"}
# test = {path = "./builtins_rust/test"}
#trap = {path = "./builtins_rust/trap"}
#setattr = {path = "./builtins_rust/setattr"}
rcolon = {path = "./builtins_rust/colon"}
 builtin = {path = "./builtins_rust/builtin"}
 #alias= {path = "./builtins_rust/alias"}
 exit = {path = "./builtins_rust/exit"}
 rhelp = {path = "./builtins_rust/help"}
 rcmd = {path = "builtins_rust/cmd"}
 enable = {path = "builtins_rust/enable"}
