[package]
name = "r_alias"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
libc = "*"
r_bash = {path = "../r_bash"}
r_readline = {path = "../r_readline"}
r_shell = {path = "../r_shell"}
rcommon = {path = "../builtins_rust/common"}

[lib]
name = "r_alias"
crate-type = ["rlib", "staticlib"]
