[package]
name = "r_bashline"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
libc = "*"
r_bash = {path = "../r_bash"}
r_readline = {path = "../r_readline"}
r_shell = {path = "../r_shell"}
rcommon = {path = "../builtins_rust/common"}
r_bracecomp = {path = "../r_bracecomp"}


[lib]
name = "r_bashline"
crate-type = ["rlib", "staticlib"]
