[package]
name = "r_make_cmd"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
libc = "*"
r_bash = {path = "../r_bash"}
rcommon = {path = "../builtins_rust/common"}
r_shell = {path = "../r_shell"}
r_eval = {path = "../r_eval"}

[lib]
name = "r_make_cmd"
crate-type = ["rlib", "staticlib"]
