[package]
name = "r_dispose_cmd"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
libc = "*"
r_bash = {path = "../r_bash"}
r_execute_cmd = {path = "../r_execute_cmd"}
rcommon = {path = "../builtins_rust/common"}

[lib]
name = "r_dispose_cmd"
crate-type = ["staticlib", "rlib"]
