[package]
name = "r_findcmd"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
libc = "*"
r_bash = {path = "../r_bash"}
r_shell = {path = "../r_shell"}
r_execute_cmd = {path = "../r_execute_cmd"}



[lib]
name = "r_findcmd"
crate-type = ["rlib", "staticlib"]
