[package]
name = "r_redir"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
libc = "*"
stdext = "0.3.1"
#caller = {path = "../builtins_rust/r_caller"}
rcommon = {path = "../builtins_rust/common"}
r_bash = {path = "../r_bash"}

[lib]
name = "r_redir"
crate-type = ["rlib", "staticlib"]


