[package]
name = "renable"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "renable"
crate-type = ["staticlib","rlib"]

[dependencies]
libc = "0.2"
libloading = "0.7"
rcmd = {path="../cmd"}
rcommon = {path="../common"}
