[package]
name = "exit"
version = "0.1.0"
edition = "2021"
#build = "../build.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
libc  = "0.2"
nix = "0.23.0"
rjobs = {path="../jobs"}


[lib]
crate-type = ["staticlib"]
name = "rexit"
