[package]
name = "rexit"
version = "0.1.0"
edition = "2018"


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
libc  = "0.2"
nix = "0.23.0"
rjobs = {path="../jobs"}
rcommon = {path="../common"}


[lib]
crate-type = ["staticlib","rlib"]
name = "rexit"
