[package]
authors = ["zhanghuanhuan"]
name = "rhelp"
version = "0.0.1"
build = "../build.rs"
edition = "2018"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
libc = "0.2"
nix = "0.24.1"

[lib]
crate-type = ["staticlib"]
name = "rhelp"
