[package]
name = "printf"
version = "0.1.0"
edition = "2018"
authors = ["lvgenggeng"]
#build = "../build.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "rprintf"
crate-type = ["staticlib"]

[dependencies]
libc = "0.2"
nix = "0.23"
