[package]
name = "rreturn"
version = "0.1.0"
edition = "2018"
authors = ["lvgenggeng"]
#build = "../build.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "rreturn"
crate-type = ["staticlib","rlib"]

[dependencies]
libc = "0.2"
nix = "0.23"
rcommon = {path = "../common"}