[package]
name = "rsetattr"
version = "0.1.0"
edition = "2018"
authors = ["lvgenggeng"]


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "rsetattr"
crate-type = ["staticlib","rlib"]

[build-dependencies]
rdeclare = {path = "../declare"}

[dependencies]
libc = "*"
nix = "*"
rdeclare = {path = "../declare"}
rcommon = {path = "../common"}
